--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
             <li>Contact</li>
             <ul class="contact-icons">
                 <li class="list-icons"> <a href="mailto:adekunleismail14@gmail.com" class="fa fa-envelope-o icon" aria-hidden="true"></a></li>
-                <li class="list-icons"><a href="https://github.com/Thesaleem" class="fa fa-github icon" aria-hidden="true"></a></li>
-                <li class="list-icons"><a href="https://twitter.com/TheSaleem_" class="fa fa-twitter icon" aria-hidden="true"></a></li>
+                <li class="list-icons"><a href="https://github.com/Thesaleem" target="_blank" class="fa fa-github icon" aria-hidden="true"></a></li>
+                <li class="list-icons"><a href="https://twitter.com/TheSaleem_"  target="_blank" class="fa fa-twitter icon" aria-hidden="true"></a></li>
             </ul>
         </ul>
     </section>
